# gemini-rs-workflow

./: .gitignore  Cargo.toml  README.md  index.html
src/: gemini.rs  main.rs  server.rs
