[package]
name = "gemini-rs-workflow"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
webbrowser = "0.8"
